<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/ll_round_white"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiptPrint"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/color_1A1A1A"
            android:layout_marginBottom="16dp"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printDone"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/color_1A1A1A"
            android:layout_marginBottom="16dp"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doneComment"
            android:textSize="14dp"
            android:gravity="center"
            tools:ignore="HardcodedText,SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/no"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/color_4C4F54"
                android:background="@drawable/bt_round_b1b4bb"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/order"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="@string/yes"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/bt_round_1d6de5"
                tools:ignore="SpUsage" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>