<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/settingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables,UselessParent">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="3dp"
            android:src="@drawable/ic_setting"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/color_7E828B"
            android:textSize="14dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg01"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/color_7E828B"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="10dp"
                android:text="@string/wma"
                android:textSize="48dp"
                android:textStyle="bold"
                android:textColor="@color/color_154DA3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/mobileVer"
                android:textSize="28dp"
                android:textStyle="normal"
                android:textColor="@color/color_154DA3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/et_round_c9cbd0"
                android:drawableStart="@drawable/ic_id"
                android:drawablePadding="8dp"
                android:hint="@string/etId"
                android:imeOptions="actionNext"
                android:inputType="textUri"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_B1B4BB"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_round_c9cbd0"
                android:drawableStart="@drawable/ic_pw"
                android:drawablePadding="8dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="12dp"
                android:hint="@string/etPw"
                android:imeOptions="actionDone"
                android:inputType="textUri"
                android:textColor="@color/black"
                android:textColorHint="@color/color_B1B4BB"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16dp"/>

            <LinearLayout
                android:id="@+id/llCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_marginBottom="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="6dp"
                    android:background="@drawable/selector_checkbox"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkId"
                    android:textColor="@color/color_1A1A1A"
                    android:textSize="14dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/loginBtn"
                android:textColor="@color/color_F6F9FE"
                android:textStyle="bold"
                android:textSize="16dp"
                android:background="@drawable/bt_round_c9cbd0"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/copyright"
            android:textColor="@color/color_7E828B"
            android:fontWeight="500"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/appVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appVer"
            android:textColor="@color/color_7E828B"
            android:fontWeight="400"
            android:textSize="11dp"/>
    </LinearLayout>

</LinearLayout>