<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/header"
        layout="@layout/layout_header"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/check_circle" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/orderRegSendingSuccess"
        android:textSize="18dp"
        android:textColor="@color/color_1A1A1A"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:text="@string/SuccessComment"
        android:textSize="14dp"
        android:textColor="@color/color_1A1A1A" />

    <View
        android:id="@+id/divideLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/color_DBDCDF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/printQuantity"
            android:textSize="14dp"
            android:textColor="@color/color_7E828B" />

        <kr.co.kimberly.wma.custom.IntComma
            android:id="@+id/printQuantity"
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="14dp"
            android:background="@drawable/et_round_c9cbd0"
            android:paddingVertical="10dp"
            android:paddingHorizontal="12dp"
            android:inputType="number"
            android:gravity="end"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/printType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/printerOption"
            android:textSize="14dp"
            android:textColor="@color/color_7E828B" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:checked="true"
                android:text="@string/printerMenuOption"
                android:theme="@style/CustomRadioButton"/>

            <RadioButton
                android:id="@+id/radioCombine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printerIntegratedOption"
                android:theme="@style/CustomRadioButton"/>

        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/printBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/print"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@drawable/txt_1d6de5_white"
        android:background="@drawable/bt_round_border_1d6de5"
        android:visibility="gone"/>

    <Button
        android:id="@+id/unableBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/print"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/bt_round_c9cbd0"
        tools:ignore="SpUsage" />

</LinearLayout>